# psxgpt

./: .env.example  .gitignore  README.md  Step1DownloadPDFsSearch.py  Step1DownloadPDFsTickers.py  Step2ConvertPDFtoMarkdown.py  Step3ChunkMarkdown.py  Step4MetaDataTags.py  Step5CombineMetaData.py  Step6CreateEmbeddings.py  Step7GradioAppWithFilters.py  Step7LaunchGradio.py  Step7MCPServerPsxGPT.py  Step7aGradioAppNoFilters.py  Step8MCPClientGemini.py  Step8MCPClientPsxGPT.py  Step8MCPServerPsxGPT.py  Step9MCPClientPsxGPT.py  Tool1Mistral_OCR.py  Tool2ValidateProcessing.py  chainlit.md  chainlit.py  chainlit_schema_psx.sql  chainlitdb.py  env.example  filter_schema.json  prompts.md  prompts.py  pyproject.toml  query_lifecycle_analysis.md  test_health_check.py  tickers.json
.chainlit/: config.toml
enhanced_client_contexts/: client_context_20250604_130931.json  client_context_20250604_140605.json  client_context_20250604_140724.json  client_context_20250604_142640.json  client_context_20250604_142736.json  client_context_20250604_142842.json  client_context_20250604_142951.json
enhanced_contexts/: context_20250604_130852_244_5f32113b.json  context_20250604_130852_582_05b86100.json  context_20250604_130852_891_a41b5c12.json  context_20250604_130853_315_d71cdde5.json  context_20250604_130853_728_d4fb2674.json  context_20250604_130854_151_1abb5139.json  context_20250604_130854_562_783608b7.json  context_20250604_130854_967_4621cd8d.json  context_20250604_140501_828_6f63ab09.json  context_20250604_140502_253_8f889de1.json  context_20250604_140502_666_ed7e3212.json  (+36 more)
(+571 files in other folders)
